--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=api_advocacia
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform= org.hibernate.dialect.H2Dialect
-spring.h2.console.path=/h2
+
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbadvogados
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
+spring.jpa.hibernate.ddl-auto=update
